--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,14 +18,24 @@
 
     <!--    功能页面-->
     <string name="enter_password">输入密码</string>
-    <string name="read_file">读取文件</string>
+    <string name="read_file">读取</string>
     <string name="preview_file">解密预览</string>
-    <string name="write_file">写入文件</string>
+    <string name="write_file">保存为</string>
     <string name="encrypt">加密</string>
     <string name="decrypt">解密</string>
     <string name="enter_word_need_to_en_decrypt">输入需要加密/解密的文字</string>
     <string name="output_result">输出结果</string>
     <string name="copy_output_result">复制输出结果</string>
+    <string name="source_folder">源目录</string>
+    <string name="purpose_folder">目标目录</string>
 
+    <!--    侧滑栏-->
+    <string name="software">软件</string>
+    <string name="main_page">主界面</string>
+    <string name="info_about">关于</string>
+    <string name="crypt_info_function">加密信息功能</string>
+    <string name="text_encrypt">文本加密</string>
+    <string name="file_encrypt">文件加密</string>
+    <string name="pic_decrypt">图片解密</string>
 
 </resources>
