update ui and add the AboutActivity,UsingHelperActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <!--    软件信息  -->
-    <string name="app_name">加解密程序</string>
-    <string name="version_full">版本：2.0.0</string>
-    <string name="version">2.0.0</string>
+    <string name="app_name">工具箱</string>
+    <string name="version_word">版本</string>
+    <string name="version_full">版本：2.1.0</string>
+    <string name="version">2.1.0</string>
     <string name="sysInfo">系统 安卓%1$s SDK版本 %2$s</string>
 
     <!--    主页面web页面-->
@@ -38,4 +39,17 @@
     <string name="file_encrypt">文件加密</string>
     <string name="pic_decrypt">图片解密</string>
 
+    <!--    关于页面-->
+    <string name="using_helper">使用帮助</string>
+    <string name="opensource_address">开源地址</string>
+    <string name="about_author">关于开发者</string>
+    <string name="author_name">LittleCabbage</string>
+    <string name="email_to_author">给作者发邮件</string>
+
+<!--    帮助页面-->
+    <string name="text_encrypt_helper">加密：在密码输入框内输入你自己定义的密码，然后在第一个文本框内输入你要加密的字符，点击加密按钮，加密后的密文就会出现在第二个文本框内\n解密：在密码输入框内输入你得到的解密密码，把密文粘贴在第一个文本框内，然后点击解密，即可在第二个文本框内看到解密之后的明文\n</string>
+    <string name="file_encrypt_helper">加密：在密码输入框内输入你自己定义的密码，然后点击“读取”，在出现的文件管理器中寻找你需要加密的文件，选择好之后，点击“保存为”，默认和刚刚选择的文件在相同目录，可自定义修改文件名称，确定之后，点击加密，即可在你指定的目标目录输出一个加密后的文件\n解密：在密码输入框内输入你获取的密码，然后点击“读取”，在文件管理器中找到你要解密的文件，确定之后，点击保存为，自定义名称之后，<b>一定要记得最后加上文件后缀名，否则打不开文件</b>，点击解密，然后就能在你自定义的目标目录出现一个解密后的文件\n</string>
+    <string name="pic_decrypt_helper">图片的加密就是文件的加密，只是这里解密单独把图片拎出来了，可以解密后进行预览\n</string>
+    <string name="crypto_method">本应用加密方法为：字符转换为MD5值，文件用密码进行AES加密，解密时，字符倒退回去算出明文即可，文件就用密码解开AES加密\n</string>
+    <string name="en_de_crypt_func_word">软件加解密方式说明</string>
 </resources>
